@@ -1,1 +1,1 @@
-Open Sudoku
+opensudoku
