@@ -2,8 +2,8 @@
 <project version="4">
   <component name="ProjectModuleManager">
     <modules>
-      <module fileurl="file://$PROJECT_DIR$/OpenSudoku.iml" filepath="$PROJECT_DIR$/OpenSudoku.iml" />
       <module fileurl="file://$PROJECT_DIR$/app/app.iml" filepath="$PROJECT_DIR$/app/app.iml" />
+      <module fileurl="file://$PROJECT_DIR$/opensudoku.iml" filepath="$PROJECT_DIR$/opensudoku.iml" />
     </modules>
   </component>
 </project>
