@@ -8,8 +8,8 @@ android {
         applicationId "org.moire.opensudoku"
         minSdkVersion 8
         targetSdkVersion 22
-        versionCode 20150703
-        versionName "2.2"
+        versionCode 20160919
+        versionName "2.2.1"
     }
     buildTypes {
         release {
