@@ -1,6 +1,8 @@
 <html>
 <head><style type="text/css">body {font-size: smaller;}</style></head>
 <body>
+  <b>2.2.1</b>
+  <ul><li>Added turkish language. Thanks @gokaykayki!</li></ul>
   <b>2.2</b>
   <ul><li>New dark default themes.</li></ul>
   <b>2.1</b>
